# desktop/src/open-api/api/api.ts
@@ -36,6 +36,8 @@ export * from './role.service';
 import { RoleService } from './role.service';
 export * from './search.service';
 import { SearchService } from './search.service';
+export * from './supplierProfile.service';
+import { SupplierProfileService } from './supplierProfile.service';
 export * from './systemEmail.service';
 import { SystemEmailService } from './systemEmail.service';
 export * from './systemSettings.service';
@@ -50,4 +52,4 @@ export * from './userPreferences.service';
 import { UserPreferencesService } from './userPreferences.service';
 export * from './widget.service';
 import { WidgetService } from './widget.service';
-export const APIS = [ApiKeyService, AuthService, CategoryService, CommentService, CustomFieldService, DashboardService, ExportService, FeatureConfigService, GroupsService, ImportService, NotificationsService, PermissionService, PromptService, ReceiptService, ReceiptImageService, ReceiptProcessingSettingsService, ReportService, RoleService, SearchService, SystemEmailService, SystemSettingsService, SystemTaskService, TagService, UserService, UserPreferencesService, WidgetService];
+export const APIS = [ApiKeyService, AuthService, CategoryService, CommentService, CustomFieldService, DashboardService, ExportService, FeatureConfigService, GroupsService, ImportService, NotificationsService, PermissionService, PromptService, ReceiptService, ReceiptImageService, ReceiptProcessingSettingsService, ReportService, RoleService, SearchService, SupplierProfileService, SystemEmailService, SystemSettingsService, SystemTaskService, TagService, UserService, UserPreferencesService, WidgetService];
