# desktop/src/open-api/model/models.ts
@@ -83,11 +83,15 @@ export * from './reportTemplate';
 export * from './reportTemplateGrant';
 export * from './reportTemplateOption';
 export * from './resetPasswordCommand';
+export * from './resolveSupplierProfileCommand';
+export * from './resolveSupplierProfileResponse';
 export * from './role';
 export * from './searchResult';
 export * from './signUpCommand';
 export * from './sortDirection';
 export * from './subjectLineRegex';
+export * from './supplierProfile';
+export * from './supplierProfileAlias';
 export * from './systemEmail';
 export * from './systemSettings';
 export * from './systemTask';
@@ -115,6 +119,7 @@ export * from './upsertPromptCommand';
 export * from './upsertReceiptCommand';
 export * from './upsertReceiptProcessingSettingsCommand';
 export * from './upsertRoleCommand';
+export * from './upsertSupplierProfileCommand';
 export * from './upsertSystemEmailCommand';
 export * from './upsertSystemSettingsCommand';
 export * from './upsertTagCommand';
